# rs-bio

./: Cargo.toml  rustfmt.toml
crate/bio/: Cargo.toml
crate/bio-http/: Cargo.toml
crate/bio-http/src/: lib.rs
crate/bio/doc/: Buffer.md  type.IO.md  type.Source.md
crate/bio/doc/sample_text/: TomBuffins.md
crate/bio/examples/: bio_example.rs
crate/bio/examples/example/: concat_input.rs  each_consecutive.rs  type.IO.rs  type.Source.rs
crate/bio/src/: buffer3.rs  lib.rs
crate/bio/src/buffer3/: copy_strategy.rs  flow.rs
crate/bio/src/buffer3/flow/: each_consecutive.rs
crate/dev-tool/: Cargo.toml
crate/dev-tool/src/: lib.rs
crate/uci/: Cargo.toml
doc/: Buffer.md  crate.md  type.Source.md
doc/sample_text/: BufferedCarbon.md  Bufferwards.md  Comedy.md  GameOfBuffers.md  HarukiBufferami.md  TheBufftrix.md
examples/: bio_example.rs  composer_stream.rs  concat_input.rs
examples/example/: composer_stream.rs  each_consecutive.rs  type.IO.rs  type.Source.rs
src/: buffer.rs  buffer2.rs  buffer3.rs  example.rs  example2.rs  lib.rs  stream.rs
src/buffer3/: buffer.rs  compact_strategy.rs  flow.rs  stream.rs  tap.rs  test.rs
src/buffer3/flow/: each_consecutive.rs
src/stream/: chunk.rs  impl_streams_for_buffer.rs  impl_streams_for_slice.rs
